# MNIST-TVM-recognizer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/deelvin/mnist_tvm_recognizer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  TVMRunner.cpp  TVMRunner.h  mnist_runner.cpp
app/src/main/java/com/deelvin/mnist_tvm_recognizer/: MainActivity.java  PaintView.java  TVM_MNIST_Helper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/deelvin/mnist_tvm_recognizer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
